# fastapi-template

./: .gitignore  LICENSE  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: coverage.yml  linting.yaml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2023_10_29_initial.py
backend/scripts/: format_scripts.py  migrate_script.py  run_scripts.py  test_scripts.py
backend/src/: __init__.py  database.py  main.py  models.py
backend/src/config/: __init__.py  config.py  constants.py  logging.py
backend/src/user/: __init__.py  router.py  schemas.py
backend/tests/: __init__.py  conftest.py  test_database.py  test_setup.py  utils.py
backend/tests/user/: __init__.py  test_user.py
docker/: Dockerfile.backend
